vendor/cargo/parameterized-macro-1.1.0/tests/fail/id_already_defined.stderr
error: custom attribute panicked
 --> $DIR/id_already_defined.rs:3:1
  |
3 | #[parameterized(v = { 1, 2, 3 }, v = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: found duplicate entry for 'v'
